compiler/testData/multiplatform/classScopes/functionIncorrectSignature/output.txt
-- Common --
Exit code: OK
Output:
compiler/testData/multiplatform/classScopes/functionIncorrectSignature/common.kt:1:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class Foo {
^^^^^^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/functionIncorrectSignature/jvm.kt:2:16: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect fun function(b: ByteArray): Int
  The 'actual' declaration: actual fun function(b: ByteArray): Long
Reason: the return types are different
    actual fun function(b: ByteArray): Long = b.size.toLong()
               ^^^^^^^^
